Fix Vercel build: /api/pops route, runtime nodejs, avoid Prisma at build, env alignment

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "worker": "tsx src/workers/pop-processor.ts",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
